--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
 
   "dependencies": {
+    "htmlparser": "1.7.x",
     "hubot": ">= 1.0.4",
-    "redis": "0.6.7"
+    "redis": "0.6.7",
+    "soupselect": "0.2.0"
   },
 
   "directories":  {
