--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 
   "dependencies": {
     "hubot": ">= 1.0.4",
-    "redis": "0.6.7"
+    "redis": "0.6.7",
+    "jsdom": "==0.2.0"
   },
 
   "directories":  {
