--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name":        "hubot-scripts",
-  "version":     "1.1.4",
+  "version":     "1.1.5",
   "author":      "hubot",
   "keywords":    "hubot plugin scripts campfire bot robot",
-  "description": "Allows you to open in to a variety of scripts",
+  "description": "Allows you to opt in to a variety of scripts",
   "licenses":     [{
     "type":       "MIT",
     "url":        "http://github.com/github/hubot-scripts/raw/master/LICENSE"
