initial commit for twitter integration github/hubot-scripts#37

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "htmlparser": "1.7.x",
     "sprintf": "0.1.1",
     "hashlib": "1.0.1",
-    "wwwdude": "0.1.0"
+    "wwwdude": "0.1.0",
+    "twitter-node": "0.0.2"
   },
 
   "directories":  {
