Add store messages to CouchDB (via cradle)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "wwwdude": "0.1.0",
     "pypi": "0.1.0",
     "underscore": ">= 1.2.1",
-    "underscore.string": ">= 1.1.6"
+    "underscore.string": ">= 1.1.6",
+    "cradle": "0.5.7"
   },
 
   "directories":  {
