--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name":        "hubot-scripts",
-  "version":     "1.1.4",
+  "version":     "1.1.8",
   "author":      "hubot",
   "keywords":    "hubot plugin scripts campfire bot robot",
-  "description": "Allows you to open in to a variety of scripts",
+  "description": "Allows you to opt in to a variety of scripts",
   "licenses":     [{
     "type":       "MIT",
     "url":        "http://github.com/github/hubot-scripts/raw/master/LICENSE"
@@ -15,14 +15,23 @@
   },
 
   "dependencies": {
-    "hubot": ">= 1.1.2",
+    "hubot": ">= 1.1.9",
+    "optparse": "1.0.3",
     "redis": "0.6.7",
     "jsdom": "==0.2.0",
     "xml2js": "0.1.x",
     "wolfram": "0.1.1",
     "soupselect": "0.2.0",
     "htmlparser": "1.7.x",
-    "sprintf": "0.1.1"
+    "sprintf": "0.1.1",
+    "hashlib": "1.0.1",
+    "wwwdude": "0.1.0",
+    "pypi": "0.1.0",
+    "underscore": ">= 1.2.1",
+    "underscore.string": ">= 1.1.6",
+    "cradle": "0.5.7",
+    "clark": "*",
+    "scribe-node": "0.0.19"
   },
 
   "directories":  {
