--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":        "hubot-scripts",
-  "version":     "1.1.8",
+  "version":     "2.0.0",
   "author":      "hubot",
   "keywords":    "hubot plugin scripts campfire bot robot",
   "description": "Allows you to opt in to a variety of scripts",
@@ -20,11 +20,9 @@
     "redis": "0.6.7",
     "jsdom": "==0.2.0",
     "xml2js": "0.1.x",
-    "wolfram": "0.1.1",
     "soupselect": "0.2.0",
     "htmlparser": "1.7.x",
     "sprintf": "0.1.1",
-    "hashlib": "1.0.1",
     "wwwdude": "0.1.0",
     "pypi": "0.1.0"
   },
@@ -32,5 +30,5 @@
   "directories":  {
     "lib": "./src"
   },
-  "engine": "node >= 0.4.1 < 0.5.0"
+  "engine": "node >= 0.4.1"
 }
