--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":        "hubot-scripts",
-  "version":     "2.0.1",
+  "version":     "2.0.2",
   "author":      "hubot",
   "keywords":    "hubot plugin scripts campfire bot robot",
   "description": "Allows you to opt in to a variety of scripts",
@@ -28,8 +28,7 @@
     "underscore": ">= 1.2.1",
     "underscore.string": ">= 1.1.6",
     "cradle": "0.5.7",
-    "clark": ">= 0.0.3",
-    "scribe-node": "0.0.20"
+    "clark": ">= 0.0.3"
   },
 
   "directories":  {
