add wunderlist command
This script allows a user to map to an email address which is then used to add
todos to the wunderlist inbox. Additional configuration via environment
variables is needed and described in the script header text.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "clark": ">= 0.0.3",
     "bang": "0.2.x",
     "shellwords": "0.0.x",
-    "nodepie": "0.4.0"
+    "nodepie": "0.4.0",
+    "mailer": "0.6.7"
   },
 
   "directories":  {
