Fix error in JSON

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bang": "0.2.x",
     "shellwords": "0.0.x",
     "nodepie": "0.4.0",
-    "mailer": "0.6.7"
+    "mailer": "0.6.7",
     "scribe-node": "0.0.24"
   },
 
