--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "shellwords": "0.0.x",
     "nodepie": "0.4.0",
     "mailer": "0.6.7",
-    "scribe-node": "0.0.24"
+    "scribe-node": "0.0.24",
+    "sandbox": "0.8.2"
   },
 
   "directories":  {
