--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "githubot": "0.1.4",
     "sandbox": "0.8.2",
     "prowler": "0.0.3",
-    "handlebars": ">= 1.0.5beta"
+    "handlebars": ">= 1.0.5beta",
+    "solr": "0.2.1"
   },
 
   "directories":  {
