--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "hubot": ">= 2.0.4",
     "optparse": "1.0.3",
-    "redis": "0.6.7"
+    "redis": "0.6.7",
+    "jquery": "1.7.2",
+    "jsdom": "0.2.14"
   },
 
   "directories":  {
