--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "dependencies": {
     "hubot": ">= 2.0.4",
     "optparse": "1.0.3",
-    "redis": "0.6.7",
-    "jquery": "1.7.2",
-    "jsdom": "0.2.14"
+    "redis": "0.6.7"
   },
 
   "directories":  {
