added the github client to the dependency list

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name":        "hubot-scripts",
-  "version":     "2.4.1",
-  "author":      "hubot",
-  "keywords":    "hubot plugin scripts campfire bot robot",
+  "name": "hubot-scripts",
+  "version": "2.4.1",
+  "author": "hubot",
+  "keywords": "hubot plugin scripts campfire bot robot",
   "description": "Allows you to opt in to a variety of scripts",
-  "licenses":     [{
-    "type":       "MIT",
-    "url":        "http://github.com/github/hubot-scripts/raw/master/LICENSE"
-  }],
-
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/github/hubot-scripts.git"
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/github/hubot-scripts/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/github/hubot-scripts.git"
   },
-
   "dependencies": {
     "hubot": ">= 2.4.0",
-    "redis": "0.7.2"
+    "redis": "0.7.2",
+    "github": "~0.1.8"
   },
-
-  "directories":  {
+  "directories": {
     "lib": "./src"
   },
   "engine": "node >= 0.8.x"
